# cpp-2d-robot-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_tests
.github/workflows/: ci.yml
src/: main.cpp  test
src/control/: path_follower.cpp  path_follower.hpp
src/planning/: astar.cpp  astar.hpp
src/sim/: motion_model.cpp  motion_model.hpp  occupancy_grid.cpp  occupancy_grid.hpp  robot.cpp  robot.hpp  robot_state.hpp  sensor.cpp  sensor.hpp  simulator.cpp  simulator.hpp
src/util/: math.hpp
tests/: main.cpp  test_astar.cpp  test_closed_loop.cpp  test_grid.cpp  test_motion.cpp  test_sensor.cpp  test_simulator.cpp
